# ClawdNotch

./: .gitignore  CHANGELOG.md  ClawdNotch.spec  LICENSE  README.md  claude_notch.py  create_shortcut.py  pyproject.toml  requirements-dev.txt  requirements.txt
.fortress/: FINAL_FINDINGS.md  coverage-map.md  deferred.md  last-audit.md
.fortress/reports/: 2026-04-10-execution-log.md  2026-04-10-sbom.json
.github/workflows/: ci.yml  release.yml
.superpowers/brainstorm/5202-1775884133/content/: 01-current-vs-proposed.html  02-refined-minimal.html  waiting.html
.superpowers/brainstorm/5202-1775884133/state/: server-info  server-stopped
claude_notch/: __main__.py  claude_notch_hook.ps1.template  config.py  git_checkpoints.py  hooks.py  notifications.py  sessions.py  system_monitor.py  token_aggregator.py  ui.py  update_checker.py  usage.py
claude_notch/ui/: __init__.py  clawd.py  notch.py  settings.py  splash.py  toast.py  tray.py
clawdnotch media/: clawd-character-bible.md
docs/archives/: v4.0.0-audit.md
docs/superpowers/plans/: 2026-03-29-claude-notch-v1.md  2026-03-30-clawdnotch-v3.md
docs/superpowers/specs/: 2026-03-29-claude-notch-v1-design.md  2026-03-30-clawdnotch-v3-production-design.md
tests/: conftest.py  test_config.py  test_dpapi.py  test_emotion.py  test_export.py  test_git_checkpoints.py  test_hooks.py  test_notifications.py  test_sessions.py  test_smoke.py  test_system_monitor.py  test_toast.py  test_token_aggregator.py  test_ui_screenshots.py  test_update_checker.py  test_usage.py
