[project]
name = "claude-notch"
version = "4.0.0"
description = "The Windows notch for Claude Code — session tracking, animations, usage stats"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "ReelDad", email = "MavProGroup@gmail.com"}]
keywords = ["claude", "claude-code", "overlay", "notch", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "PyQt6>=6.6.0,<7",
    "plyer>=2.1.0,<3",
    "requests>=2.32.4,<3",
    "keyboard>=0.13.5,<1",
]

[project.urls]
Homepage = "https://github.com/MavProDev/ClawdNotch"
Issues = "https://github.com/MavProDev/ClawdNotch/issues"

[project.scripts]
claude-notch = "claude_notch.__main__:main"

[tool.ruff.lint]
select = ["F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
